--- a/OHA/public/assets/sass/_base.scss
+++ b/OHA/public/assets/sass/_base.scss
@@ -52,30 +52,30 @@ address{
 /*===============================
 fade
 ===============================*/
-.fade-in{
-	opacity: 0 ;
-	transition: opacity 1s ease;
-	&.is-in-view{
-		opacity: 1;
-	}
-}
+// .fade-in{
+// 	opacity: 0 ;
+// 	transition: opacity 1s ease;
+// 	&.is-in-view{
+// 		opacity: 1;
+// 	}
+// }
 
-.fade-in-up{
-	opacity: 0 ;
-	transform: translateY(24px);
-	transition: opacity 1s ease, transform 1s ease;
-	&.is-in-view{
-		opacity: 1;
-		transform: translateY(0);
-	}
-}
+// .fade-in-up{
+// 	opacity: 0 ;
+// 	transform: translateY(24px);
+// 	transition: opacity 1s ease, transform 1s ease;
+// 	&.is-in-view{
+// 		opacity: 1;
+// 		transform: translateY(0);
+// 	}
+// }
 
-.fade-in-down{
-	opacity: 0 ;
-	transform: translateY(-24px);
-	transition: opacity 1s ease, transform 1s ease;
-	&.is-in-view{
-		opacity: 1;
-		transform: translateY(0);
-	}
-}
+// .fade-in-down{
+// 	opacity: 0 ;
+// 	transform: translateY(-24px);
+// 	transition: opacity 1s ease, transform 1s ease;
+// 	&.is-in-view{
+// 		opacity: 1;
+// 		transform: translateY(0);
+// 	}
+// }
