--- a/sandbox/assets/css/style.css
+++ b/sandbox/assets/css/style.css
@@ -27,6 +27,15 @@ body{
 	padding: 10px;
 	color: white;
 }
+.box2{
+	width: 10px;
+	height: 10px;
+	background-color: #AAAAAA;
+	margin-top: 10px;
+	padding: 2px;
+	color: white;
+}
+
 
 .flex{
 	display: flex;
